--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -7,6 +7,10 @@ h1 {
 	text-align: center;
 }
 
+p {
+   color: orange;	
+}
+
 @media (min-width: 992px) {
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
 		border: 1px solid black;
