--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -17,7 +17,8 @@ p {
 		float: left;
 		border: 1px solid black;
 		background-color: gray;
-		margin: 50px 15px 50px 15px;
+		margin: 20px 15px 10px 15px;
+		position: relative;
 	}
 	.col-lg-1 {
 		width: 8.33%;
@@ -62,7 +63,8 @@ p {
    	    float: left;
 		border: 1px solid black;
 		background-color: gray;
-		margin: 50px 15px 50px 15px;
+		margin: 20px 15px 10px 15px;
+		position: relative;
 	}
 	.col-md-1 {
 		width: 8.33%;
