--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -19,6 +19,8 @@ p {
 		background-color: gray;
 		margin: 20px 15px 10px 15px;
 		position: relative;
+		margin-left: auto;
+		margin-right: auto;
 	}
 	.col-lg-1 {
 		width: 8.33%;
@@ -65,6 +67,8 @@ p {
 		background-color: gray;
 		margin: 20px 15px 10px 15px;
 		position: relative;
+		margin-left: auto;
+		margin-right: auto;
 	}
 	.col-md-1 {
 		width: 8.33%;
