--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -56,55 +56,44 @@ span {
 	width: 100%;
 }
 
-/** HEADER **/
-#header-nav {
-    background-color: #f6b319;
-    border-radius: 0;
-    border: 0;
+/* Not XS screen */
+@media (min-width:768px){
+	#collapsable-nav {
+		visibility: hidden;
+	}
 }
 
-.navbar-brand {
-    padding-top: 25px;
-    padding-bottom: 40px;
+/* XS screen */
+@media (max-width:767px){
+	
+	.navbar-brand {
+		margin-left: 15px;
+	}
+	
+	.content-cell {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+	
+	#collapsable-nav {
+		background-color: #BBEABB;
+	}
+	
+	#nav-list {		
+		margin-bottom: 1px;
+		margin-top: 0px;
+	}
+	
+	#nav-list li{
+		text-align: center;
+		border: 1px solid #559955;
+		margin-bottom:-1px;
+	}
+	#nav-list li:hover{
+		font-weight: bold;
+		background-color: #BBDDBB;
+	}
 }
-.navbar-brand a:hover, .navbar-brand a:focus {
-    text-decoration: none;
-}
-.navbar-brand h1 { /* Restaurant name */
-    font-family: 'Lora', serif;
-    color: #557c3e;
-    font-size: 1.7em;
-    text-transform: uppercase;
-    position: relative;
-    font-weight: bold;
-    text-shadow: 1px 1px 1px #222;
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: .75;
-    padding-bottom: 20px;
-}
-
-#nav-list {
-    margin-top: 10px;
-}
-#nav-list a {
-    color: #951C49;
-    text-align: center;
-}
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-    border: 1px solid #61122f;
-}
-.navbar-header button.navbar-toggle {
-    clear: both;
-    margin-top: -33px;
-}
-
-
-#nav-list li p {
-    background: #8e24aa;
-}
-
-/* END HEADER */
 
 
 @media (min-width: 992px) {
@@ -135,27 +124,3 @@ span {
   }
 }
 
-@media (max-width: 767px) {
-    /* Header */
-    .navbar-brand {
-        padding-top: 10px;
-    }
-    .navbar-brand h1 { /* Restaurant name */
-        padding-top: 10px;
-        font-size: 4vw; /* 1vw = 1% of viewport width */
-    }
-
-    #collapsable-nav a { /* Collapsed nav menu text */
-        font-size: 1.2em;
-    }
-    #collapsable-nav a span { /* Collapsed nav menu glyph */
-        font-size: 1em;
-        margin-right: 5px;
-    }
-    /* End Header */
-
-    /* Home Page */
-    .menu-item-description {
-        text-align: center;;
-    }
-}
