--- a/module3-solution/css/style.css
+++ b/module3-solution/css/style.css
@@ -1,159 +1,54 @@
 
-* {
-  box-sizing: border-box;
+div > p {
+	text-align: justify;
 }
 
-h1 {
-	font-size: 27px;
-	text-align: center;
-	color: rgb(0, 0, 0);
-	margin-bottom: 30px;
+.content-cell {
+	background-color: #BBDDBB;
+	margin-bottom: 15px;
+	padding: 10px 15px;
 }
 
-p {
-	padding: 15px 5px 0px 5px;
-	font-size: 18px;
-	position: relative;
+.content-cell h2 {
+	margin-top: -5px;
 }
 
-.section { 
-	background-color: rgb(150, 150, 150);
-   	border: 2px solid black;
-   	margin-top: 20px; 
-   	margin-right: 20px; 
-   	padding: 3px;
-   	text-align: justify;
-   	position: relative;
- }
-
-span {
-	font-size: 22px;
-	width: 180px;
-	border: 1px solid black;
-	font-weight: bold;
-	text-align: center;
-	float: right; top :0; right: 0; margin: 0;
-	position: absolute;
-}
-
-#num1 {
-	background-color: rgb(250, 150, 150);
-	color: rgb(0, 0, 0);
-}
-
-#num2 {
-	background-color: rgb(250, 0, 0);
-	color: rgb(250, 250, 250);
-}
-
-#num3 {
-	background-color: rgb(200, 200, 100);
-	color: rgb(0, 0, 0);
-}
-}
-
-.row {
-	width: 100%;
-}
-
-/** HEADER **/
-#header-nav {
-    background-color: #f6b319;
-    border-radius: 0;
-    border: 0;
-}
-
-.navbar-brand {
-    padding-top: 25px;
-    padding-bottom: 40px;
-}
-.navbar-brand a:hover, .navbar-brand a:focus {
-    text-decoration: none;
-}
-.navbar-brand h1 { /* Restaurant name */
-    color: #557c3e;
-    font-size: 1.7em;
-    text-transform: uppercase;
-    position: relative;
-    font-weight: bold;
-    text-shadow: 1px 1px 1px #222;
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: .75;
-    padding-bottom: 20px;
-}
-
-#nav-list {
-    margin-top: 10px;
-}
-#nav-list a {
-    color: #951C49;
-    text-align: center;
-}
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-    border: 1px solid #61122f;
-}
-.navbar-header button.navbar-toggle {
-    clear: both;
-    margin-top: -33px;
-}
-
-
-#nav-list li p {
-    background: #8e24aa;
-}
-
-/* END HEADER */
-
-
-@media (min-width: 992px) {
- 
-  .col-lg-4 {
-    width: 33.33%;
-    float: left;
+/* Not XS screen */
+@media (min-width:768px){
+	#collapsable-nav {
+		visibility: hidden;
 	}
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
- 
-  .col-md-6 {
-    width: 50%;
-    float: left;
-  }
-  .col-md-12 {
-    width: 100%;
-    float: left;
-  }
-}
-
-@media (max-width: 767px)  {
-  
-  .col-sx-12 {
-  	float: left;
-    width: 100%;
-  }
-
-  /* Header */
-  .navbar-brand {
-      padding-top: 10px;
-  }
-  .navbar-brand h1 { /* Restaurant name */
-      padding-top: 10px;
-      font-size: 4vw; /* 1vw = 1% of viewport width */
-  }
-
-  #collapsable-nav a { /* Collapsed nav menu text */
-      font-size: 1.2em;
-  }
-  #collapsable-nav a span { /* Collapsed nav menu glyph */
-      font-size: 1em;
-      margin-right: 5px;
-  }
-  /* End Header */
-
-  /* Home Page */
-  .menu-item-description {
-      text-align: center;;
-  }
+/* XS screen */
+@media (max-width:767px){
+	
+	.navbar-brand {
+		margin-left: 15px;
+	}
+	
+	.content-cell {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+	
+	#collapsable-nav {
+		background-color: #BBEABB;
+	}
+	
+	#nav-list {		
+		margin-bottom: 1px;
+		margin-top: 0px;
+	}
+	
+	#nav-list li{
+		text-align: center;
+		border: 1px solid #559955;
+		margin-bottom:-1px;
+	}
+	#nav-list li:hover{
+		font-weight: bold;
+		background-color: #BBDDBB;
+	}
 }
 
