--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -5,7 +5,7 @@ div > p {
 }
 
 .content-cell {
-	background-color: #BBDDBB;
+	background-color: gray;
 	margin-bottom: 15px;
 	padding: 10px 15px;
 }
@@ -14,14 +14,12 @@ div > p {
 	margin-top: -5px;
 }
 
-/* Not XS screen */
 @media (min-width:768px){
 	#collapsable-nav {
 		visibility: hidden;
 	}
 }
 
-/* XS screen */
 @media (max-width:767px){
 	
 	.navbar-brand {
@@ -34,7 +32,7 @@ div > p {
 	}
 	
 	#collapsable-nav {
-		background-color: #BBEABB;
+		background-color: gray;
 	}
 	
 	#nav-list {		
@@ -49,6 +47,6 @@ div > p {
 	}
 	#nav-list li:hover{
 		font-weight: bold;
-		background-color: #BBDDBB;
+		background-color: gray;
 	}
 }
